# signa

./: .gitignore  Dockerfile  README.md  install_docker.sh  pyproject.toml
chapter_01/: chapter_01_basic_nn_in_pytorch.ipynb
chapter_02/: chapter_02_intro_do_backpropagation.ipynb
chapter_03/: chapter_03_multiple_inputs_and_outputs.ipynb
chapter_04/: chapter_04_argmax_and_softmax.ipynb  direct_implementaion_of_the video.ipynb
chapter_06/: chapter_06_convolutional_neural_networks.ipynb
chapter_08/: chapter_08_lstms.ipynb
chapter_09/: chapter_09_word_embedding.ipynb
chapter_10/: chapter_10_seq2seq_lstm.ipynb
chapter_11/: chapter_11_attention.ipynb
chapter_11/lightning_logs/version_0/: events.out.tfevents.1730663237.joshs-imac.lan.83148.0
chapter_11/lightning_logs/version_0/checkpoints/: epoch=19-step=40.ckpt
chapter_12/: chapter_12_encoder_decoder_transformer.ipynb
chapter_13/: chapter_13_decoder_transformer.ipynb
chapter_14/: chapter_14_combing_encoder_with_decoder_transformers.ipynb
